tests/fail/02-nesting.stderr
error[E0277]: the trait bound `C: Sealed` is not satisfied
  --> tests/fail/02-nesting.rs:26:42
   |
26 | impl lets::attempt::some::nesting::T for C {}
   |                                          ^ the trait `Sealed` is not implemented for `C`
   |
   = help: the following other types implement trait `Sealed`:
             A
             B
note: required by a bound in `T`
  --> tests/fail/02-nesting.rs:8:17
   |
8  |                 #[sealed(pub(crate))]
   |                 ^^^^^^^^^^^^^^^^^^^^^ required by this bound in `T`
9  |                 pub trait T {}
   |                           - required by a bound in this trait
   = note: `T` is a "sealed trait", because to implement it you also need to implement `lets::attempt::some::nesting::__seal_t::Sealed`, which is not accessible; this is usually done to force you to use one of the provided types that already implement it
   = help: the following types implement the trait:
             A
             B
   = note: this error originates in the attribute macro `sealed` (in Nightly builds, run with -Z macro-backtrace for more info)
